# Programming_University_2025-2026

./: main  sum.cpp  test  test.cpp
2LB1/: TheoryLB1.cpp
2lb2/: Book  Book.cpp  Book.h  LB2  LB2.cpp  TheoryLB2  TheoryLB2.cpp  tempCodeRunnerFile.cpp
2lb3/: 2LB3.cpp  CMakeLists.txt  Theory2-3.cpp
2lb3/myLib/inc/: Book.hpp  lib.hpp
2lb3/myLib/src/: Book.cpp  lib.cpp
2lbSTR/: input.txt  main  main.cpp  result.txt  theory  theory.cpp
Lecture06/: L06
Lecture07/: L07.cpp
Lecture08/: L08  L08.cpp
QT/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
app/: CMakeLists.txt  main.cpp
app_shared/: CMakeLists.txt  CMakeLists.txt.save  main.cpp
laba25/: CMakeLists.txt  amp.cpp  amp.h  cardform.cpp  cardform.h  cardform.ui  date.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  r.h  rup.cpp  rup.h
mylib/: CMakeLists.txt
mylib/src/: functions.cpp
mylib_shared/: CMakeLists.txt
mylib_shared/src/: functions.cpp
